# TaskForJob

./: .gitmodules  AppArchitecture.drawio  CMakeLists.txt  README.md  settings.xml
Binaries/Windows/: imgui.ini  log.txt  settings.xml
src/: CMakeLists.txt
src/Application/: main.cpp
src/Application/Includes/: Gui.hpp  Launcher.hpp  Log.hpp  Window.hpp  XMLParse.hpp
src/Application/include/: Callback.hpp  Log.hpp  Window.hpp  XMLParse.hpp
src/Application/src/: Callback.cpp  Gui.cpp  Launcher.cpp  Window.cpp  XMLParse.cpp
